--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+
+  <!-- Primary Meta Tags -->
   <title>German Citizenship Test</title>
+  <meta name="title" content="Your Website Title">
+  <meta name="description" content="German Citizenship Test">
+  <meta name="keywords" content="German, Citizenship Test">
+  <meta name="author" content="YArno van Staden">
 </head>
 
 <body>
