--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
 
   <!-- Primary Meta Tags -->
-  <title>German Citizenship Test</title>
-  <meta name="title" content="Your Website Title">
-  <meta name="description" content="German Citizenship Test">
-  <meta name="keywords" content="German, Citizenship Test">
-  <meta name="author" content="YArno van Staden">
+  <title>Einbürgerungstest</title>
+  <meta name="title" content="Einbürgerungstest">
+  <meta name="description"
+    content="Einbürgerungstest App - Bereite dich auf den deutschen Einbürgerungstest vor. Übe mit über 300 Fragen, nimm an Quizzen teil und lerne die Bundesländer kennen.">
+  <meta name="keywords"
+    content="Einbürgerungstest, Deutschland, Quiz, Bundesländer, Fragen, Staatsbürgerschaft, Vorbereitung, Lernen">
+  <meta name="author" content="arnovs.dev">
+  <meta name="theme-color" content="#121212">
+  <meta property="og:title" content="Einbürgerungstest Vorbereitung">
+  <meta property="og:description"
+    content="Bereite dich auf den deutschen Einbürgerungstest vor. Übe mit über 300 Fragen, nimm an Quizzen teil und lerne die Bundesländer kennen.">
+  <meta property="og:image" content="/static/images/meta/og.png">
+  <meta property="og:url" content="einbuergerungstest.vercel.app">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
