--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Einbürgerungstest</title>
   <meta name="title" content="Einbürgerungstest">
   <meta name="description"
-    content="Einbürgerungstest App - Bereite dich auf den deutschen Einbürgerungstest vor. Übe mit über 300 Fragen, nimm an Quizzen teil und lerne die Bundesländer kennen.">
+    content="Bereite dich auf den deutschen Einbürgerungstest vor. Übe mit über 300 Fragen, nimm an Quizzen teil und lerne die Bundesländer kennen.">
   <meta name="keywords"
     content="Einbürgerungstest, Deutschland, Quiz, Bundesländer, Fragen, Staatsbürgerschaft, Vorbereitung, Lernen">
   <meta name="author" content="arnovs.dev">
